crates/as2_codegen/src/snapshots/rascal_as2_codegen__tests__all_samples@MtascStyle.as.snap
---
source: crates/as2_codegen/src/tests.rs
expression: result
input_file: samples/as2_classes/MtascStyle.as
---
initializer:
  actions:
    - ConstantPool:
        - this
        - MtascStyle
        - main
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Integer: 1
        - Constant: 1
    - GetVariable
    - Push:
        - Constant: 2
    - CallMethod
    - Pop
  label_positions: {}
extra_modules:
  - - MtascStyle
    - actions:
        - ConstantPool:
            - Main method!
        - Push:
            - String: _global
        - GetVariable
        - Push:
            - String: MtascStyle
        - GetMember
        - Not
        - Not
        - If: loc0000
        - Push:
            - String: _global
        - GetVariable
        - Push:
            - String: MtascStyle
        - DefineFunction:
            name: ""
            params: []
            actions:
              actions: []
              label_positions: {}
        - StoreRegister: 1
        - SetMember
        - Push:
            - Register: 1
            - String: prototype
        - GetMember
        - StoreRegister: 2
        - Pop
        - Push:
            - Register: 1
            - String: main
        - DefineFunction:
            name: ""
            params: []
            actions:
              actions:
                - Push:
                    - Constant: 0
                - Trace
              label_positions: {}
        - SetMember
        - Push:
            - Integer: 1
            - "Null"
            - String: MtascStyle
        - GetVariable
        - Push:
            - String: prototype
        - GetMember
        - Push:
            - Integer: 3
            - String: ASSetPropFlags
        - CallFunction
        - Pop
      label_positions:
        loc0000: 27
swf_version: 15
