crates/as2_codegen/src/snapshots/rascal_as2_codegen__tests__all_samples@assign_variable_and_trace.as.snap
---
source: crates/as2_codegen/src/tests.rs
expression: result
input_file: samples/as2/assign_variable_and_trace.as
---
initializer:
  actions:
    - ConstantPool:
        - message
        - Hello World
    - Push:
        - Constant: 0
        - Constant: 1
    - DefineLocal
    - Push:
        - Constant: 0
    - GetVariable
    - Trace
  label_positions: {}
extra_modules: []
swf_version: 15
