crates/as2_codegen/src/snapshots/rascal_as2_codegen__tests__all_samples@comments.as.snap
---
source: crates/as2_codegen/src/tests.rs
expression: result
input_file: samples/as2/comments.as
---
initializer:
  actions:
    - ConstantPool:
        - a
        - "1"
        - b
        - "2"
        - c
        - "3"
        - d
        - "4"
        - test
        - e
        - "5"
        - f
        - // not a comment
        - g
        - /* not a comment */
        - h
        - "\"/* still not a comment */\""
        - i
        - "6"
        - j
        - "7"
        - k
        - "8"
    - Push:
        - Constant: 0
        - Constant: 1
    - DefineLocal
    - Push:
        - Constant: 2
        - Constant: 3
    - DefineLocal
    - Push:
        - Constant: 4
        - Constant: 5
    - DefineLocal
    - Push:
        - Constant: 6
        - Constant: 7
    - DefineLocal
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Integer: 2
        - Constant: 8
    - CallFunction
    - Pop
    - Push:
        - Constant: 9
        - Constant: 10
    - DefineLocal
    - Push:
        - Constant: 11
        - Constant: 12
    - DefineLocal
    - Push:
        - Constant: 13
        - Constant: 14
    - DefineLocal
    - Push:
        - Constant: 15
        - Constant: 16
    - DefineLocal
    - Push:
        - Constant: 17
        - Constant: 18
    - DefineLocal
    - Push:
        - Constant: 19
        - Constant: 20
    - DefineLocal
    - Push:
        - Constant: 21
        - Constant: 22
    - DefineLocal
  label_positions: {}
extra_modules: []
swf_version: 15
